Add igo2 map browser - not working!

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/splash-screen": "3.7.0",
     "@ionic-native/status-bar": "3.7.0",
     "@ionic/storage": "2.0.1",
+    "@types/openlayers": "^4.1.0",
     "angular-in-memory-web-api": "^0.3.2",
+    "igo2": "^0.4.3",
     "ionic-angular": "3.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
