--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "4.1.0",
     "@angular/forms": "4.1.0",
     "@angular/http": "4.1.0",
+    "@angular/material": "^2.0.0-beta.5",
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
     "@ionic-native/core": "3.7.0",
@@ -26,16 +27,18 @@
     "@ionic/storage": "2.0.1",
     "@types/openlayers": "^4.1.0",
     "angular-in-memory-web-api": "^0.3.2",
+    "angular2-notifications": "^0.7.4",
     "igo2": "^0.4.3",
     "ionic-angular": "3.2.1",
     "ionicons": "3.0.0",
+    "material-design-icons": "^3.0.1",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.10"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-ionic-angular": "1.1.2",
+    "@ionic/cli-plugin-ionic-angular": "1.2.0",
     "typescript": "2.2.1"
   },
   "description": "An Ionic project"
