--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular-in-memory-web-api": "^0.3.2",
     "angular2-notifications": "^0.7.4",
     "igo2": "^0.4.3",
-    "ionic-angular": "3.5.3",
+    "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
     "material-design-icons": "^3.0.1",
     "rxjs": "5.4.0",
@@ -36,8 +36,9 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.1.0",
-    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "@ionic/app-scripts": "2.1.3",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "ionic": "3.7.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project"
