--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "cordova-plugin-whitelist": "^1.3.1",
         "igo2": "^0.4.3",
         "ionic-angular": "3.6.0",
+        "ionic-img-viewer": "^2.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "material-design-icons": "^3.0.1",
