--- a/package.json
+++ b/package.json
@@ -12,24 +12,27 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "4.0.0",
+    "@angular/cdk": "2.0.0-beta.8",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/compiler-cli": "4.1.3",
     "@angular/core": "4.1.3",
     "@angular/forms": "4.1.3",
     "@angular/http": "4.1.3",
+    "@angular/material": "2.0.0-beta.8",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular2-material/icon": "^2.0.0-alpha.8-3",
+    "@angular/router": "4.1.3",
     "@ionic-native/camera": "^4.1.0",
     "@ionic-native/core": "4.1.0",
     "@ionic-native/photo-viewer": "^4.1.0",
     "@ionic-native/splash-screen": "4.1.0",
     "@ionic-native/status-bar": "4.1.0",
     "@ionic/storage": "2.0.1",
-    "@types/openlayers": "^4.1.0",
+    "@types/openlayers": "4.1.0",
     "angular-in-memory-web-api": "^0.3.2",
-    "angular2-notifications": "^0.7.4",
+    "angular2-notifications": "0.7.4",
     "com-sarriaroman-photoviewer": "^1.1.10",
     "cordova-android": "^6.2.3",
     "cordova-browser": "^4.1.0",
@@ -41,12 +44,12 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
-    "igo2": "^0.4.3",
+    "igo2": "0.8.1",
     "ionic-angular": "3.6.0",
     "ionic-img-viewer": "^2.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "material-design-icons": "^3.0.1",
+    "material-design-icons": "3.0.1",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
@@ -55,7 +58,7 @@
     "@ionic/app-scripts": "2.1.3",
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
-    "ionic": "3.7.0",
+    "ionic": "3.10.3",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
