--- a/package.json
+++ b/package.json
@@ -12,27 +12,24 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/animations": "4.4.3",
-        "@angular/cdk": "2.0.0-beta.10",
-        "@angular/common": "4.4.3",
-        "@angular/compiler": "4.4.3",
-        "@angular/compiler-cli": "4.4.3",
-        "@angular/core": "4.4.3",
-        "@angular/forms": "4.4.3",
-        "@angular/http": "4.4.3",
-        "@angular/material": "2.0.0-beta.10",
-        "@angular/platform-browser": "4.4.3",
-        "@angular/platform-browser-dynamic": "4.4.3",
-        "@angular/router": "4.4.3",
+        "@angular/common": "5.0.3",
+        "@angular/compiler": "5.0.3",
+        "@angular/compiler-cli": "5.0.3",
+        "@angular/core": "5.0.3",
+        "@angular/forms": "5.0.3",
+        "@angular/http": "5.0.3",
+        "@angular/platform-browser": "5.0.3",
+        "@angular/platform-browser-dynamic": "5.0.3",
+        "@angular/router": "5.0.3",
         "@ionic-native/camera": "^4.1.0",
-        "@ionic-native/core": "4.3.1",
+        "@ionic-native/core": "4.3.2",
         "@ionic-native/photo-viewer": "^4.1.0",
-        "@ionic-native/splash-screen": "4.3.1",
-        "@ionic-native/status-bar": "4.3.1",
-        "@ionic/storage": "2.0.1",
-        "@types/openlayers": "4.1.0",
-        "angular-in-memory-web-api": "^0.3.2",
-        "angular2-notifications": "0.7.4",
+        "@ionic-native/splash-screen": "^4.3.2",
+        "@ionic-native/status-bar": "^4.3.2",
+        "@ionic/storage": "2.1.3",
+        "@ngx-translate/core": "^10.0.1",
+        "@ngx-translate/http-loader": "^3.0.1",
+        "angular-in-memory-web-api": "^0.5.4",
         "com-sarriaroman-photoviewer": "^1.1.10",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
@@ -44,22 +41,21 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "igo2": "0.8.1",
-        "ionic-angular": "3.7.1",
-        "ionic-img-viewer": "^2.7.3",
+        "ionic-angular": "3.9.2",
+        "ionic-img-viewer": "^2.9.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "material-design-icons": "3.0.1",
-        "rxjs": "5.4.3",
+        "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "3.0.0",
+        "@ionic/app-scripts": "3.1.7",
         "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "ionic": "3.20.0",
-        "typescript": "2.3.4"
+        "typescript": "2.4.2"
     },
     "description": "An Ionic project",
     "cordova": {
