--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "survip-mobile",
     "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
+    "author": "CAUSE Inc.",
+    "homepage": "http://cauca.ca/",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
@@ -21,18 +21,16 @@
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@angular/router": "5.0.3",
-        "@ionic-native/camera": "^4.1.0",
-        "@ionic-native/core": "4.3.2",
-        "@ionic-native/photo-viewer": "^4.1.0",
-        "@ionic-native/splash-screen": "^4.3.2",
-        "@ionic-native/status-bar": "^4.3.2",
+        "@ionic-native/camera": "4.7.0",
+        "@ionic-native/core": "4.7.0",
+        "@ionic-native/splash-screen": "4.7.0",
+        "@ionic-native/status-bar": "4.7.0",
         "@ionic/storage": "2.1.3",
         "@ngx-translate/core": "^10.0.1",
         "@ngx-translate/http-loader": "^3.0.1",
         "angular-in-memory-web-api": "^0.5.4",
         "angular2-uuid": "^1.1.1",
         "brmasker-ionic-3": "^1.0.9",
-        "com-sarriaroman-photoviewer": "^1.1.10",
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
@@ -53,10 +51,7 @@
         "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "3.1.7",
-        "@ionic/cli-plugin-cordova": "1.6.2",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.20.0",
+        "@ionic/app-scripts": "3.1.9",
         "typescript": "2.4.2"
     },
     "description": "An Ionic project",
@@ -68,8 +63,7 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "com-sarriaroman-photoviewer": {}
+            "ionic-plugin-keyboard": {}
         },
         "platforms": [
             "android",
