--- a/package.json
+++ b/package.json
@@ -1,74 +1,75 @@
 {
-    "name": "survip-mobile",
-    "version": "0.0.1",
-    "author": "CAUSE Inc.",
-    "homepage": "http://cauca.ca/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "survip-mobile",
+  "version": "0.0.1",
+  "author": "CAUSE Inc.",
+  "homepage": "http://cauca.ca/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@angular/router": "5.0.3",
+    "@ionic-native/camera": "4.7.0",
+    "@ionic-native/core": "4.7.0",
+    "@ionic-native/splash-screen": "4.7.0",
+    "@ionic-native/status-bar": "4.7.0",
+    "@ionic/storage": "2.1.3",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "angular-in-memory-web-api": "^0.5.4",
+    "angular2-uuid": "^1.1.1",
+    "brmasker-ionic-3": "^1.0.9",
+    "cordova-android": "6.3.0",
+    "cordova-browser": "^4.1.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.2.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic-angular": "3.9.2",
+    "ionic-img-viewer": "^2.9.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "material-design-icons": "3.0.1",
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18",
+    "cordova-plugin-compat": "^1.1.0"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.1.9",
+    "typescript": "2.4.2"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-compat": {}
     },
-    "dependencies": {
-        "@angular/common": "5.0.3",
-        "@angular/compiler": "5.0.3",
-        "@angular/compiler-cli": "5.0.3",
-        "@angular/core": "5.0.3",
-        "@angular/forms": "5.0.3",
-        "@angular/http": "5.0.3",
-        "@angular/platform-browser": "5.0.3",
-        "@angular/platform-browser-dynamic": "5.0.3",
-        "@angular/router": "5.0.3",
-        "@ionic-native/camera": "4.7.0",
-        "@ionic-native/core": "4.7.0",
-        "@ionic-native/splash-screen": "4.7.0",
-        "@ionic-native/status-bar": "4.7.0",
-        "@ionic/storage": "2.1.3",
-        "@ngx-translate/core": "^10.0.1",
-        "@ngx-translate/http-loader": "^3.0.1",
-        "angular-in-memory-web-api": "^0.5.4",
-        "angular2-uuid": "^1.1.1",
-        "brmasker-ionic-3": "^1.0.9",
-        "cordova-android": "^6.2.3",
-        "cordova-browser": "^4.1.0",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "ionic-angular": "3.9.2",
-        "ionic-img-viewer": "^2.9.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "material-design-icons": "3.0.1",
-        "rxjs": "5.5.2",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.1.9",
-        "typescript": "2.4.2"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-camera": {},
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
-        },
-        "platforms": [
-            "android",
-            "browser",
-            "ios"
-        ]
-    }
+    "platforms": [
+      "browser",
+      "ios",
+      "android"
+    ]
+  }
 }
