--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
-    "@ionic-native/camera": "4.7.0",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -35,6 +35,7 @@
     "cordova-browser": "^4.1.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -47,8 +48,7 @@
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-plugin-compat": "^1.1.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
