--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "fabric": "^2.3.2",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "lib-sketch-tool": "^0.1.11",
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
