--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "5.0.3",
+    "@angular/cdk": "^5.0.0",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
     "@angular/core": "5.0.3",
     "@angular/forms": "5.0.3",
     "@angular/http": "5.0.3",
+    "@angular/material": "5.0.0",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/keyboard": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^10.0.1",
     "@ngx-translate/http-loader": "^3.0.1",
+    "@types/fabric": "^1.5.36",
     "angular-in-memory-web-api": "^0.5.4",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.0.9",
@@ -42,11 +47,12 @@
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "fabric": "^2.3.2",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "lib-sketch-tool": "^0.1.11",
+    "lib-sketch-tool": "^1.0.26",
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
