--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "angular-in-memory-web-api": "^0.5.4",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.1.0",
+    "canvas": "^1.6.11",
+    "cordova-android": "6.3.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
@@ -48,7 +50,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ios": "0.0.1",
-    "lib-sketch-tool": "^1.1.3",
+    "lib-sketch-tool": "^1.1.7",
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
