--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "fabric": "^2.3.3",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ios": "0.0.1",
-    "lib-sketch-tool": "^1.1.7",
+    "lib-sketch-tool": "^1.1.10",
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
