--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
-    "@ionic-native/camera": "^4.7.0",
+    "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -30,14 +30,14 @@
     "@ngx-translate/http-loader": "^2.0.1",
     "angular-in-memory-web-api": "^0.5.4",
     "angular2-uuid": "^1.1.1",
-    "brmasker-ionic-3": "^1.0.9",
-    "cordova-android": "6.3.0",
+    "brmasker-ionic-3": "^1.1.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -45,6 +45,7 @@
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ios": "0.0.1",
     "material-design-icons": "3.0.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -64,12 +65,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-compat": {}
+      "cordova-plugin-compat": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "browser",
-      "ios",
-      "android"
+      "ios"
     ]
   }
 }
