--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "fabric": "^2.3.3",
-    "font-awesome": "^4.7.0",
+    "font-awesome": "4.7.0",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -78,5 +78,9 @@
       "browser",
       "ios"
     ]
+  },
+  "config": {
+    "ionic_copy": "./config/copy.config.js",
+    "ionic_sass": "./config/sass.config.js"
   }
 }
