feat(#15) : Add cartography for fire hydrant location

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.11.0",
+    "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/splash-screen": "4.11.0",
     "@ionic-native/status-bar": "4.11.0",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@types/openlayers": "^4.6.11",
     "@types/fabric": "^1.5.40",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.1.0",
@@ -38,6 +40,7 @@
     "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -50,6 +53,8 @@
     "ios": "0.0.1",
     "lib-sketch-tool": "^1.3.7",
     "material-design-icons": "3.0.1",
+    "ol": "^5.1.3",
+    "openlayers": "^4.6.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
