--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.11.0",
+    "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/splash-screen": "4.11.0",
     "@ionic-native/status-bar": "4.11.0",
@@ -74,7 +75,6 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-compat": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "browser",
