--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "fabric": "^2.3.3",
     "font-awesome": "4.7.0",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "^3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -68,11 +68,11 @@
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-compat": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "browser",
