--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@angular/router": "5.0.3",
+    "@angular/common": "5.2.10",
+    "@angular/compiler": "5.2.10",
+    "@angular/compiler-cli": "5.2.10",
+    "@angular/core": "5.2.10",
+    "@angular/forms": "5.2.10",
+    "@angular/http": "5.2.10",
+    "@angular/platform-browser": "5.2.10",
+    "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.11.0",
     "@ionic-native/splash-screen": "4.11.0",
@@ -29,12 +28,11 @@
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "@types/fabric": "^1.5.40",
-    "angular-in-memory-web-api": "^0.5.4",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.1.0",
     "canvas": "^1.6.11",
-    "cordova-android": "6.3.0",
-    "cordova-browser": "^4.1.0",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.1.0",
@@ -53,13 +51,13 @@
     "ios": "0.0.1",
     "lib-sketch-tool": "^1.2.1",
     "material-design-icons": "3.0.1",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
-    "typescript": "2.4.2"
+    "@ionic/app-scripts": "3.1.11",
+    "typescript": "2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
