--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@ionic-native/core": "4.11.0",
     "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
+    "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/splash-screen": "4.11.0",
     "@ionic-native/status-bar": "4.11.0",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
-    "@types/openlayers": "^4.6.11",
     "@types/fabric": "^1.5.40",
+    "@types/openlayers": "^4.6.11",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.1.0",
     "canvas": "^1.6.11",
@@ -43,6 +44,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -75,6 +77,8 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-compat": {},
       "cordova-plugin-ionic-webview": {},
+      "cordova.plugins.diagnostic": {}
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "browser",
