--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "openlayers": "^4.6.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova.plugins.diagnostic": "~4.0.8"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
@@ -78,7 +79,8 @@
       "cordova-plugin-compat": {},
       "cordova-plugin-ionic-webview": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "browser",
