wip(#171): Work with cordova 8.0.0 and cordova-android 7.1.1
wip(#171): Add devDependencies to alwasys follow cordova + ionic

--- a/package.json
+++ b/package.json
@@ -39,48 +39,49 @@
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-compat": "^1.1.0",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-ionic-webview": "^2.1.3",
     "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "^4.0.10",
     "fabric": "^2.3.3",
     "ionic-angular": "^3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "ios": "0.0.1",
     "lib-sketch-tool": "^1.5.0",
     "material-design-icons": "3.0.1",
     "ol": "^5.1.3",
     "openlayers": "^4.6.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova.plugins.diagnostic": "~4.0.8"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
+    "cordova": "^8.0.0",
+    "ionic": "^4.1.2",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
+      "cordova-plugin-compat": {},
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-compat": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova.plugins.diagnostic": {},
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova.plugins.diagnostic": {},
+      "ionic-plugin-keyboard": {}
     },
     "platforms": [
       "browser",
