--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "cordova-android": "7.1.1",
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.1.3",
     "cordova-plugin-keychain-touch-id": "git+https://github.com/paychex/cordova-plugin-keychain-touch-id.git",
     "cordova-plugin-nativegeocoder": "^3.1.2",
@@ -54,7 +56,6 @@
     "fabric": "^2.3.3",
     "ionic-angular": "^3.9.2",
     "ionic-img-viewer": "^2.9.0",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "lib-sketch-tool": "^1.5.0",
     "material-design-icons": "3.0.1",
@@ -78,12 +79,14 @@
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-nativegeocoder": {
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
+      },
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "cordova.plugins.diagnostic": {},
-      "ionic-plugin-keyboard": {},
+      "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-keychain-touch-id": {}
     },
     "platforms": [
