--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-keychain-touch-id": "git+https://github.com/paychex/cordova-plugin-keychain-touch-id.git",
     "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -78,7 +78,9 @@
       "cordova-plugin-compat": {},
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
       },
