--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,4 +1,9 @@
 {
-  "apiUrl":"http://10.10.33.199:5555/api/",
-  "--apiUrl":"https://survipreventiontest.cauca.ca/api/"
+  "apiUrl":"YOUR_URL_API",
+  "hockeyapp": {
+    "androidAppId": "YOUR_ANDROID_HOCKEYAPP_ID",
+    "iosAppId": "YOUR_IOS_HOCKEYAPP_ID",
+    "autoSendCrashReports": true,
+    "ignoreCrashDialog": true
+  }
 }
