--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "survip-mobile",
-  "version": "0.0.1",
+  "version": "0.0.7",
   "author": "CAUSE Inc.",
   "homepage": "http://cauca.ca/",
   "private": true,
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@ionic-native/app-version": "^4.14.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.11.0",
     "@ionic-native/diagnostic": "^4.11.0",
@@ -37,9 +38,9 @@
     "brmasker-ionic-3": "^1.1.0",
     "canvas": "^1.6.11",
     "cordova-android": "7.1.1",
-    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.1",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
@@ -90,10 +91,10 @@
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-keychain-touch-id": {},
-      "cordova-plugin-hockeyapp": {}
+      "cordova-plugin-hockeyapp": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
-      "browser",
       "ios",
       "android"
     ]
