--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/keychain-touch-id": "^4.12.2",
+    "@ionic-native/market": "^4.14.0",
     "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/splash-screen": "4.11.0",
     "@ionic-native/status-bar": "4.11.0",
@@ -49,6 +50,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-keychain-touch-id": "git+https://github.com/paychex/cordova-plugin-keychain-touch-id.git",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -92,7 +94,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-keychain-touch-id": {},
       "cordova-plugin-hockeyapp": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-market": {}
     },
     "platforms": [
       "ios",
