feat(#179) Create page to validate minimal version

--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -5,5 +5,7 @@
     "iosAppId": "YOUR_IOS_HOCKEYAPP_ID",
     "autoSendCrashReports": true,
     "ignoreCrashDialog": true
-  }
+  },
+  "packageName":"ca.cause.survi.prevention",
+  "iosAppId":"1026853728"
 }
