--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,11 +1,11 @@
 {
-  "apiUrl":"http://10.10.33.103:5555/api/",
+  "apiUrl":"YOUR_API_URL",
   "hockeyapp": {
     "androidAppId": "YOUR_ANDROID_HOCKEYAPP_ID",
     "iosAppId": "YOUR_IOS_HOCKEYAPP_ID",
     "autoSendCrashReports": true,
     "ignoreCrashDialog": true
   },
-  "packageName":"ca.cause.survi.prevention",
-  "iosAppId":"1026853728"
+  "packageName":"APP_PACKAGE_NAME",
+  "iosAppId":"IOS_APP_ID"
 }
