--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl":"http://10.10.33.103:5555/api/",
+  "apiUrl":"https://survipreventiontest.cauca.ca/api/",
   "hockeyapp": {
     "androidAppId": "bbfb228ed1114902902ed514c632a149",
     "iosAppId": "d08a72d4d7184a28a700d12c4061386f",
