--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl":"http://localhost:5555/api/",
+  "apiUrl":"YOUR_API_URL",
   "hockeyapp": {
     "androidAppId": "YOUR_ANDROID_HOCKEYAPP_ID",
     "iosAppId": "YOUR_IOS_HOCKEYAPP_ID",
