--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/app-version": "^4.14.0",
-    "@ionic-native/camera": "^4.11.0",
-    "@ionic-native/core": "4.11.0",
-    "@ionic-native/diagnostic": "^4.11.0",
-    "@ionic-native/geolocation": "^4.11.0",
-    "@ionic-native/keychain-touch-id": "^4.12.2",
-    "@ionic-native/market": "^4.14.0",
-    "@ionic-native/native-geocoder": "^4.11.0",
-    "@ionic-native/splash-screen": "4.11.0",
-    "@ionic-native/status-bar": "4.11.0",
-    "@ionic/storage": "2.1.3",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/app-version": "~4.18.0",
+    "@ionic-native/camera": "~4.18.0",
+    "@ionic-native/core": "~4.18.0",
+    "@ionic-native/diagnostic": "~4.18.0",
+    "@ionic-native/geolocation": "~4.18.0",
+    "@ionic-native/keychain-touch-id": "~4.18.0",
+    "@ionic-native/market": "~4.18.0",
+    "@ionic-native/native-geocoder": "~4.18.0",
+    "@ionic-native/splash-screen": "~4.18.0",
+    "@ionic-native/status-bar": "~4.18.0",
+    "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "@types/fabric": "^1.5.40",
@@ -40,17 +40,17 @@
     "canvas": "^1.6.11",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-add-swift-support": "^1.7.1",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-hockeyapp": "^5.1.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-keychain-touch-id": "git+https://github.com/paychex/cordova-plugin-keychain-touch-id.git",
     "cordova-plugin-market": "^1.2.0",
-    "cordova-plugin-nativegeocoder": "^3.1.2",
+    "cordova-plugin-nativegeocoder": "^3.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -69,10 +69,10 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "3.2.1",
     "cordova": "^8.0.0",
     "ionic": "^4.1.2",
-    "typescript": "2.6.2"
+    "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
