--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-hockeyapp": "^5.1.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-keychain-touch-id": "git+https://github.com/paychex/cordova-plugin-keychain-touch-id.git",
     "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativegeocoder": "^3.1.3",
@@ -79,9 +79,6 @@
     "plugins": {
       "cordova-plugin-camera": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
       },
@@ -93,7 +90,11 @@
       "cordova-plugin-keychain-touch-id": {},
       "cordova-plugin-hockeyapp": {},
       "cordova-plugin-market": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      }
     },
     "platforms": [
       "ios",
