--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/http-loader": "^2.0.1",
     "@types/fabric": "^1.5.40",
     "@types/openlayers": "^4.6.11",
+    "angular-progress-bar": "^1.0.8",
     "angular2-uuid": "^1.1.1",
     "brmasker-ionic-3": "^1.1.0",
     "canvas": "^1.6.11",
