--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "survip-mobile",
-  "version": "1.5.0",
-  "author": "CAUSE Inc.",
-  "homepage": "http://cauca.ca/",
+  "version": "1.6.0",
+  "author": "CAUSE 9-1-1 Inc.",
+  "homepage": "http://cause911.ca/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -75,7 +75,7 @@
     "ionic": "^4.1.2",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
+  "description": "SURVI Prevention Mobile",
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
