--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "survip-mobile",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "author": "CAUSE 9-1-1 Inc.",
   "homepage": "http://cause911.ca/",
   "private": true,
@@ -41,7 +41,7 @@
     "canvas": "^1.6.11",
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-add-swift-support": "^1.7.2",
+    "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -55,6 +55,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "~2.6.0",
     "cordova.plugins.diagnostic": "^4.0.10",
     "fabric": "^2.3.3",
     "ionic-angular": "^3.9.2",
@@ -67,8 +68,7 @@
     "openlayers": "^4.6.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-sqlite-storage": "~2.6.0"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
