--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/fabric": "^1.5.40",
     "angular2-uuid": "^1.1.1",
+    "br-mask": "0.0.7",
     "canvas": "^1.6.11",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-camera": "4.0.3",
