--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -30,17 +30,22 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@types/fabric": "^1.5.40",
     "angular2-uuid": "^1.1.1",
     "br-mask": "0.0.7",
     "canvas": "^1.6.11",
+    "cordova-android": "7.1.4",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
     "cordova-plugin-keychain-touch-id": "3.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "fabric": "^2.3.3",
-    "lib-sketch-tool": "1.7.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -58,6 +63,8 @@
     "@types/node": "~12.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/fabric": "^1.5.40",
+    "canvas": "^1.6.11",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -77,7 +84,18 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-keychain-touch-id": {},
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
