feat(#295) Make gesture works again

--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -46,6 +46,7 @@
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "fabric": "^2.3.3",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -60,10 +61,11 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
-    "@types/node": "~12.0.0",
+    "@types/fabric": "^1.5.40",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/fabric": "^1.5.40",
+    "@types/node": "~12.0.0",
     "canvas": "^1.6.11",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
